<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/button_padding"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->


    <ImageView
        android:id="@+id/me_image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/me_image"
        android:src="@drawable/myself"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nickname_box"
        style="@style/WhiteBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/nickname_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_box"
        app:layout_constraintTop_toBottomOf="@+id/me_image" />

    <TextView
        android:id="@+id/name_box"
        style="@style/WhiteBox"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/name_box"
        app:layout_constraintEnd_toStartOf="@+id/nickname_box"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/me_image" />

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/nickname_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_box" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_box" />

    <TextView
        android:id="@+id/aboutme_box"
        style="@style/WhiteBox"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/aboutme_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

    <TextView
        android:id="@+id/hobby"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:text="@string/bio_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutme_box" />


</androidx.constraintlayout.widget.ConstraintLayout>